--- a/systemd/mdmon@.service
+++ b/systemd/mdmon@.service
@@ -6,7 +6,7 @@
 #  (at your option) any later version.
 
 [Unit]
-Description=MD Metadata Monitor on /dev/%I
+Description=MD Metadata Monitor mdmon@%I
 DefaultDependencies=no
 Before=initrd-switch-root.target
 
@@ -14,6 +14,7 @@ Before=initrd-switch-root.target
 # mdmon should never complain due to lack of a platform,
 # that is mdadm's job if at all.
 WorkingDirectory=/bb
+SyslogIdentifier=mdmon@%I
 Environment=IMSM_NO_PLATFORM=1
 EnvironmentFile=-/bb/etc/mdmon.env
 # The mdmon starting in the initramfs (with dracut at least)
